feat: implement sparql templating engine