@@ -1,9 +1,10 @@
 package com.kubiki.palamedes.knowledge;
 
-import com.kubiki.palamedes.constants.OntologyConstants;
 import com.kubiki.palamedes.model.ActionData;
-import com.kubiki.palamedes.model.ExecutionStatus;
+import com.kubiki.palamedes.model.AnomalyTarget;
+import com.kubiki.palamedes.model.ActiveActionSummary;
 import com.kubiki.palamedes.model.WorkflowState;
+import com.kubiki.palamedes.templating.types.IriType;
 import org.eclipse.rdf4j.model.IRI;
 import org.eclipse.rdf4j.model.Literal;
 import org.eclipse.rdf4j.model.ValueFactory;
@@ -27,7 +28,10 @@ public class GraphDBGateway {
 
     private static final String TEMPLATE_FETCH_ACTION_STRUCTURE = "fetch-action-structure";
     private static final String VAR_ACTION = "action";
-    private static final String VAR_ACTION_IRI = "actionIri";
+    private static final String VAR_ACTION_ID = "actionId";
+    public static final String RESOURCE_IRI = "resource";
+    public static final String ACTION_IRI = "action";
+    public static final String INTENT_IRI = "intent";
 
     private final SparqlClient sparqlClient;
     private final SparqlQueryBuilder sparqlQueryBuilder;
@@ -45,9 +49,9 @@ public class GraphDBGateway {
     }
 
     public void transitionState(IRI actionId, String stateFragment) {
-        IRI hasCurrentState = ontologyRegistry.moam("hasCurrentState");
-        IRI newState = ontologyRegistry.moam(stateFragment);
-        IRI hasLastTransitionTimestamp = ontologyRegistry.moam("hasLastTransitionTimestamp");
+        IRI hasCurrentState = ontologyRegistry.actionsOntology("hasCurrentState");
+        IRI newState = ontologyRegistry.actionsOntology(stateFragment);
+        IRI hasLastTransitionTimestamp = ontologyRegistry.actionsOntology("hasLastTransitionTimestamp");
 
         sparqlClient.executeWithConnection(conn -> {
             ValueFactory vf = conn.getValueFactory();
@@ -62,18 +66,18 @@ public class GraphDBGateway {
     }
 
     public void createActionWorkflow(IRI resourceIri, IRI intentIri, String actionId) {
-        IRI actionIri = ontologyRegistry.moam(actionId);
-        IRI hasCurrentState = ontologyRegistry.moam("hasCurrentState");
-        IRI stateInitial = ontologyRegistry.moam("State_Initial");
-        IRI targetsEntity = ontologyRegistry.moam("targetsEntity");
-        IRI hasActionID = ontologyRegistry.moam("hasActionID");
-        IRI hasLastTransitionTimestamp = ontologyRegistry.moam("hasLastTransitionTimestamp");
+        IRI actionIri = ontologyRegistry.actionsOntology(actionId);
+        IRI hasCurrentState = ontologyRegistry.actionsOntology("hasCurrentState");
+        IRI stateInitial = ontologyRegistry.actionsOntology("State_Initial");
+        IRI targetsEntity = ontologyRegistry.actionsOntology("targetsEntity");
+        IRI hasActionID = ontologyRegistry.actionsOntology("hasActionID");
+        IRI hasLastTransitionTimestamp = ontologyRegistry.actionsOntology("hasLastTransitionTimestamp");
 
         sparqlClient.executeWithConnection(conn -> {
             ValueFactory vf = conn.getValueFactory();
             conn.begin();
             conn.add(actionIri, RDF.TYPE, intentIri);
-            conn.add(actionIri, RDF.TYPE, ontologyRegistry.moam("AutonomicAction"));
+            conn.add(actionIri, RDF.TYPE, ontologyRegistry.actionsOntology("AutonomicAction"));
             conn.add(actionIri, hasCurrentState, stateInitial);
             conn.add(actionIri, targetsEntity, resourceIri);
             conn.add(actionIri, hasActionID, vf.createLiteral(actionId));
@@ -84,26 +88,26 @@ public class GraphDBGateway {
     }
 
     public void materializeActionInstance(IRI actionIri, ActionData template, IRI target, IRI parentIri) {
-        IRI targetsEntity = ontologyRegistry.moam("targetsEntity");
-        IRI hasActionID = ontologyRegistry.moam("hasActionID");
-        IRI isDecomposedInto = ontologyRegistry.moam("isDecomposedInto");
+        IRI targetsEntity = ontologyRegistry.actionsOntology("targetsEntity");
+        IRI hasActionID = ontologyRegistry.actionsOntology("hasActionID");
+        IRI isDecomposedInto = ontologyRegistry.actionsOntology("isDecomposedInto");
         
         sparqlClient.executeWithConnection(conn -> {
             ValueFactory vf = conn.getValueFactory();
             conn.begin();
             conn.add(parentIri, isDecomposedInto, actionIri);
             conn.add(actionIri, RDF.TYPE, template.id()); 
-            conn.add(actionIri, RDF.TYPE, ontologyRegistry.moam(template instanceof ActionData.ComplexWorkflow ? "ComplexWorkflow" : "SimpleAction"));
+            conn.add(actionIri, RDF.TYPE, ontologyRegistry.actionsOntology(template instanceof ActionData.ComplexWorkflow ? "ComplexWorkflow" : "SimpleAction"));
             conn.add(actionIri, targetsEntity, target);
             conn.add(actionIri, hasActionID, vf.createLiteral(actionIri.getLocalName()));
 
             if (template instanceof ActionData.SimpleAction sa) {
-                conn.add(actionIri, ontologyRegistry.moam("hasExecutionProtocol"), vf.createLiteral(sa.protocol().name()));
-                conn.add(actionIri, ontologyRegistry.moam("hasExecutionInstruction"), vf.createLiteral(sa.instruction()));
+                conn.add(actionIri, ontologyRegistry.actionsOntology("hasExecutionProtocol"), vf.createLiteral(sa.protocol().name()));
+                conn.add(actionIri, ontologyRegistry.actionsOntology("hasExecutionInstruction"), vf.createLiteral(sa.instruction()));
                 if (sa.method() != null) {
-                    conn.add(actionIri, ontologyRegistry.moam("hasHttpMethod"), vf.createLiteral(sa.method().name()));
+                    conn.add(actionIri, ontologyRegistry.actionsOntology("hasHttpMethod"), vf.createLiteral(sa.method().name()));
                 }
-                conn.add(actionIri, ontologyRegistry.moam("hasExpectedStatusCode"), vf.createLiteral(String.valueOf(sa.expectedStatusCode()), XSD.INTEGER));
+                conn.add(actionIri, ontologyRegistry.actionsOntology("hasExpectedStatusCode"), vf.createLiteral(String.valueOf(sa.expectedStatusCode()), XSD.INTEGER));
             }
             
             conn.commit();
@@ -112,7 +116,7 @@ public class GraphDBGateway {
     }
 
     public WorkflowState getState(IRI actionIri) {
-        IRI hasCurrentState = ontologyRegistry.moam("hasCurrentState");
+        IRI hasCurrentState = ontologyRegistry.actionsOntology("hasCurrentState");
         return sparqlClient.executeWithConnection(conn -> {
             var statements = conn.getStatements(actionIri, hasCurrentState, null);
             if (statements.hasNext()) {
@@ -124,7 +128,7 @@ public class GraphDBGateway {
     }
 
     public void linkDependent(IRI dependent, IRI dependency) {
-        IRI dependsOn = ontologyRegistry.moam("dependsOn");
+        IRI dependsOn = ontologyRegistry.actionsOntology("dependsOn");
         sparqlClient.executeWithConnection(conn -> {
             conn.begin();
             conn.add(dependent, dependsOn, dependency);
@@ -136,7 +140,7 @@ public class GraphDBGateway {
     public ActionData fetchActionStructure(IRI actionId) {
         String sparql = sparqlQueryBuilder.builder()
                 .template(TEMPLATE_FETCH_ACTION_STRUCTURE)
-                .variable(VAR_ACTION_IRI, actionId)
+                .variable(new IriType(VAR_ACTION_ID, actionId))
                 .build();
 
         return sparqlClient.executeQuery(sparql, stream -> {
@@ -159,8 +163,8 @@ public class GraphDBGateway {
                 .build();
 
         return sparqlClient.executeQuery(sparql, stream -> stream.map(bs -> new ActiveActionSummary(
-                (IRI) bs.getValue("action"),
-                (IRI) bs.getValue("resource"),
+                (IRI) bs.getValue(ACTION_IRI),
+                (IRI) bs.getValue(RESOURCE_IRI),
                 bs.getValue("resourceName").stringValue(),
                 bs.getValue("state").stringValue()
         )).collect(Collectors.toList()));
@@ -169,13 +173,13 @@ public class GraphDBGateway {
     public boolean isIdempotencyWindowOpen(IRI actionId) {
         String sparql = sparqlQueryBuilder.builder()
                 .template("check-idempotency")
-                .variable("actionIri", actionId)
+                .variable(new IriType(VAR_ACTION_ID, actionId))
                 .build();
 
         List<BindingSet> results = sparqlClient.executeQuery(sparql, stream -> stream.collect(Collectors.toList()));
         if (results.isEmpty()) return true; 
         
-        BindingSet bs = results.get(0);
+        BindingSet bs = results.getFirst();
         if (bs.getValue("window") == null || bs.getValue("lastTransition") == null) return true;
         
         int window = ((Literal) bs.getValue("window")).intValue();
@@ -185,14 +189,14 @@ public class GraphDBGateway {
         return now.isAfter(lastTransition.plusSeconds(window));
     }
 
-    public IRI findCompensation(IRI actionIri) {
+    public IRI findCompensation(IRI actionId) {
         String sparql = sparqlQueryBuilder.builder()
                 .template("find-compensation")
-                .variable("actionIri", actionIri)
+                .variable(new IriType(VAR_ACTION_ID, actionId))
                 .build();
         List<BindingSet> results = sparqlClient.executeQuery(sparql, Stream::toList);
         if (!results.isEmpty()) {
-            return (IRI) results.get(0).getValue("compensationIntent");
+            return (IRI) results.getFirst().getValue("compensationIntent");
         }
         return null;
     }
@@ -203,16 +207,16 @@ public class GraphDBGateway {
                 .build();
 
         return sparqlClient.executeQuery(sparql, stream -> stream.map(bs -> new AnomalyTarget(
-                (IRI) bs.getValue("resource"),
+                (IRI) bs.getValue(RESOURCE_IRI),
                 bs.getValue("resourceName").stringValue(),
-                (IRI) bs.getValue("intent")
+                (IRI) bs.getValue(INTENT_IRI)
         )).collect(Collectors.toList()));
     }
 
-    public List<IRI> findDependents(IRI actionIri) {
+    public List<IRI> findDependents(IRI actionId) {
         String sparql = sparqlQueryBuilder.builder()
                 .template("find-dependents")
-                .variable("actionIri", actionIri)
+                .variable(new IriType(VAR_ACTION_ID, actionId))
                 .build();
 
         return sparqlClient.executeQuery(sparql, stream -> stream
@@ -221,7 +225,7 @@ public class GraphDBGateway {
     }
 
     public IRI findParent(IRI childIri) {
-        IRI isDecomposedInto = ontologyRegistry.moam("isDecomposedInto");
+        IRI isDecomposedInto = ontologyRegistry.actionsOntology("isDecomposedInto");
         return sparqlClient.executeWithConnection(conn -> {
             var statements = conn.getStatements(null, isDecomposedInto, childIri);
             if (statements.hasNext()) {
@@ -232,7 +236,7 @@ public class GraphDBGateway {
     }
 
     public List<IRI> findChildren(IRI parentIri) {
-        IRI isDecomposedInto = ontologyRegistry.moam("isDecomposedInto");
+        IRI isDecomposedInto = ontologyRegistry.actionsOntology("isDecomposedInto");
         return sparqlClient.executeWithConnection(conn -> {
             return conn.getStatements(parentIri, isDecomposedInto, null)
                     .stream().map(s -> (IRI) s.getObject()).toList();
@@ -243,6 +247,4 @@ public class GraphDBGateway {
         return sparqlClient.executeBooleanQuery(query);
     }
 
-    public record ActiveActionSummary(IRI actionIri, IRI resourceIri, String resourceName, String stateFragment) {}
-    public record AnomalyTarget(IRI resourceIri, String resourceName, IRI intentIri) {}
 }
